overflow issues

--- a/Styles/global/_defaults.less
+++ b/Styles/global/_defaults.less
@@ -16,16 +16,16 @@ body {
     padding-top: 58px;
     overflow: hidden;
 }
-
+/*
 #zone-feature,
 #zone-subfeature,
 #zone-sectiona,
 #zone-sectionb
 #zone-sectionc
-#zone-sectiond,
-#zone-footer {
+#zone-sectiond {
     overflow: hidden;
 }
+*/
 
 @media (min-width: @screen-desktop) {
     body {
