--- a/Styles/theme.css
+++ b/Styles/theme.css
@@ -11158,13 +11158,16 @@ body {
   padding-top: 58px;
   overflow: hidden;
 }
+/*
 #zone-feature,
 #zone-subfeature,
 #zone-sectiona,
-#zone-sectionb #zone-sectionc #zone-sectiond,
-#zone-footer {
-  overflow: hidden;
+#zone-sectionb
+#zone-sectionc
+#zone-sectiond {
+    overflow: hidden;
 }
+*/
 @media (min-width: 992px) {
   body {
     margin-bottom: 0;
